tolk-tester/tests/invalid-syntax/err-3981.tolk
struct(0x2345666666666666666666666666666666666666666666666666666666666666666666666666789) S {}

/**
@compilation_should_fail
@stderr invalid integer constant
@stderr ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  
 */
